--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -7,4 +7,12 @@ $border-color: black;
 $day-gap: 1px;
 $day-padding: 10px;
 $calendar-width: 7 * $day-size + 6 * $day-gap + 2 * $day-padding;
-
+$days-margin: (
+  mon: ($day-size + $day-gap) * 0,
+  tru: ($day-size + $day-gap) * 1,
+  wed: ($day-size + $day-gap) * 2,
+  thu: ($day-size + $day-gap) * 3,
+  fri: ($day-size + $day-gap) * 4,
+  sat: ($day-size + $day-gap) * 5,
+  sun: ($day-size + $day-gap) * 6,
+);
