add task solution v3

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,11 +44,16 @@ p {
   text-align: center;
 }
 
+.container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .calendar {
   margin: auto;
   display: flex;
-  align-items: center;
-  justify-content: center;
   gap: $gap;
   padding: 10px;
   width: $calendar-width;
