--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,10 @@
-body {
-  margin: 0;
+* {
+  box-sizing: border-box;
 }
+
+@import "variables/variables";
+@import "utils/mixins";
+@import "block/page";
+@import "block/calendar";
+@import "utils/each";
+@import "utils/for";
