--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,5 @@
 @import "utils/variables";
 @import "blocks/calendar"
+
+//you can change month-lenght and
+//first day of month (start-day) in variables.scss ;)
