--- a/src/styles/block/calendar.scss
+++ b/src/styles/block/calendar.scss
@@ -2,7 +2,7 @@
   @include positionAbsoluteCenter;
 
   padding: $padding;
-  max-width: $block-column * ($block + $padding);
+  width: $block-column * ($block + $padding);
 
   display: flex;
   flex-wrap: wrap;
