--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,5 +1,5 @@
-$cell-size: 100px;
-$border-width: 1px;
+$cell-size: 98px;
+$border-width: 0.8px;
 $border-color: #000;
 $gap: 1px;
 $columns: 7;
@@ -7,3 +7,5 @@ $padding: 10px;
 $calendar-width: calc(#{$columns} * #{$cell-size} +
 (#{$columns} - 1) * #{$gap} + 2 * #{$padding});
 $font-family: arial;
+
+$week-days: ("mon":0, "tue":1, "wed":2, "thu":3, "fri":4, "sat":5, "sun":6);
