--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,15 +1,21 @@
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .calendar {
-  width: 700px;
+  width: 707px;
   display: flex;
   flex-wrap: wrap;
   counter-reset: day;
+  gap: 1px;
+  padding: 10px;
 }
-
 .calendar__day {
+  display: none;
   width: 100px;
   height: 100px;
   border: 1px solid black;
@@ -23,25 +29,227 @@ body {
   transition: transform 0.5s;
   text-align: center;
   justify-content: center;
-}
-
-.calendar__day::before {
-  content: counter(day);
   line-height: 100px;
 }
-
+.calendar__day--1::before {
+  content: "1";
+}
+.calendar__day--2::before {
+  content: "2";
+}
+.calendar__day--3::before {
+  content: "3";
+}
+.calendar__day--4::before {
+  content: "4";
+}
+.calendar__day--5::before {
+  content: "5";
+}
+.calendar__day--6::before {
+  content: "6";
+}
+.calendar__day--7::before {
+  content: "7";
+}
+.calendar__day--8::before {
+  content: "8";
+}
+.calendar__day--9::before {
+  content: "9";
+}
+.calendar__day--10::before {
+  content: "10";
+}
+.calendar__day--11::before {
+  content: "11";
+}
+.calendar__day--12::before {
+  content: "12";
+}
+.calendar__day--13::before {
+  content: "13";
+}
+.calendar__day--14::before {
+  content: "14";
+}
+.calendar__day--15::before {
+  content: "15";
+}
+.calendar__day--16::before {
+  content: "16";
+}
+.calendar__day--17::before {
+  content: "17";
+}
+.calendar__day--18::before {
+  content: "18";
+}
+.calendar__day--19::before {
+  content: "19";
+}
+.calendar__day--20::before {
+  content: "20";
+}
+.calendar__day--21::before {
+  content: "21";
+}
+.calendar__day--22::before {
+  content: "22";
+}
+.calendar__day--23::before {
+  content: "23";
+}
+.calendar__day--24::before {
+  content: "24";
+}
+.calendar__day--25::before {
+  content: "25";
+}
+.calendar__day--26::before {
+  content: "26";
+}
+.calendar__day--27::before {
+  content: "27";
+}
+.calendar__day--28::before {
+  content: "28";
+}
+.calendar__day--29::before {
+  content: "29";
+}
+.calendar__day--30::before {
+  content: "30";
+}
+.calendar__day--31::before {
+  content: "31";
+}
 .calendar__day:hover {
   cursor: pointer;
   background-color: pink;
   transform: translateY(-20px);
 }
-
 .calendar__day:nth-child(n+30) {
   display: none;
 }
+.calendar__day--start-day {
+  margin-left: calc((5) * 101px);
+}
 
-.calendar__day:first-child {
-  margin-left: calc(100px * (2 - 1));
+.calendar__day--1 {
+  display: block;
+}
+
+.calendar__day--2 {
+  display: block;
+}
+
+.calendar__day--3 {
+  display: block;
+}
+
+.calendar__day--4 {
+  display: block;
+}
+
+.calendar__day--5 {
+  display: block;
+}
+
+.calendar__day--6 {
+  display: block;
+}
+
+.calendar__day--7 {
+  display: block;
+}
+
+.calendar__day--8 {
+  display: block;
+}
+
+.calendar__day--9 {
+  display: block;
+}
+
+.calendar__day--10 {
+  display: block;
+}
+
+.calendar__day--11 {
+  display: block;
+}
+
+.calendar__day--12 {
+  display: block;
+}
+
+.calendar__day--13 {
+  display: block;
+}
+
+.calendar__day--14 {
+  display: block;
+}
+
+.calendar__day--15 {
+  display: block;
+}
+
+.calendar__day--16 {
+  display: block;
+}
+
+.calendar__day--17 {
+  display: block;
+}
+
+.calendar__day--18 {
+  display: block;
+}
+
+.calendar__day--19 {
+  display: block;
+}
+
+.calendar__day--20 {
+  display: block;
+}
+
+.calendar__day--21 {
+  display: block;
+}
+
+.calendar__day--22 {
+  display: block;
+}
+
+.calendar__day--23 {
+  display: block;
+}
+
+.calendar__day--24 {
+  display: block;
+}
+
+.calendar__day--25 {
+  display: block;
+}
+
+.calendar__day--26 {
+  display: block;
+}
+
+.calendar__day--27 {
+  display: block;
+}
+
+.calendar__day--28 {
+  display: block;
+}
+
+.calendar__day--29 {
+  display: block;
 }
 
 /*# sourceMappingURL=style.css.map */
