add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,7 +25,7 @@ body {
     height: $card-size;
     border: 1px solid black;
     &:hover {
-      animation: move 0.5s;
+      animation: move 0.5s forwards;
       cursor: pointer;
       background-color: pink;
     }
