--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,10 @@
-$squaredimensions: 100px;
-$squarecolor: #eee;
+@import "./variables";
 
-body {
-  margin: 0;
+.pagecontent {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .calendar {
@@ -42,11 +44,11 @@ body {
     width: $squaredimensions;
     background-color: $squarecolor;
     border: 1px solid black;
+    transition-duration: 0.5s;
 
     &:hover {
       cursor: pointer;
-      background-color: pink;
-      transition-duration: 0.5s;
+      background-color: $backgroundhovercolor;
       transform: translateY(-20px);
     }
 
