--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -3,12 +3,7 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
-
-// Change here to get shorter month
 $month-length: 31;
-
-// change (0 - 6) to start month from diffrent day
-$start-day: 6;
 
 $numbers: ();
 
@@ -17,12 +12,12 @@ $day-name: ();
 // I know there was no need to add day of week, i hope you dont hate that
 // Just wanted to know if i CAN do this
 
-$day: (
-  0: "Sunday",
-  1: "Monday",
-  2: "Tuesday",
-  3: "Wednesday",
-  4: "Thursday",
-  5: "Friday",
-  6: "Saturday",
+$days: (
+  "mon": 0,
+  "tue": 1,
+  "wed": 2,
+  "thu": 3,
+  "fri": 4,
+  "sat": 5,
+  "sun": 6,
 );
