--- a/src/styles/blocks/_calendar.scss
+++ b/src/styles/blocks/_calendar.scss
@@ -37,14 +37,14 @@
   }
 
   @each $day, $i in $days {
-    &__start-day-#{$day} :first-child {
+    &--start-day-#{$day} :first-child {
       margin-left: $i * 103px;
     }
 
   }
 
   @for $i from 28 through 31 {
-    &__month-length-#{$i} :nth-child(n + #{$i + 1}) {
+    &--month-length-#{$i} :nth-child(n + #{$i + 1}) {
       display: none;
     }
   }
@@ -65,4 +65,3 @@
 
   }
 }
-
