--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,5 @@
 $squaredimensions: 100px;
 $squarecolor: #eee;
 $backgroundhovercolor: pink;
+$calendarpadding: 10px;
+$calendarwidth: (7 * $squaredimensions + 6 * 1px + 2 * $calendarpadding);
