--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,8 +10,9 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: 40%;
-  padding: 10px;
+  box-sizing: border-box;
+  width: $calendarwidth;
+  padding: $calendarpadding;
   gap: 1px;
 
   $days:
