--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,3 +7,10 @@ $start-days:
   fri 4,
   sat 5,
   sun 6;
+
+$calendar-width: 730px;
+
+$cell-width: 100px;
+$cell-height: 100px;
+
+$transition-duration: 0.5s;
