added variables for width calculation

--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,8 +1,7 @@
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+$size-gap: 1px;
+$default-size: 100px;
+$default-padding: 10px;
+
 $month-length: 31;
 
 $numbers: ();
