--- a/src/styles/blocks/_calendar.scss
+++ b/src/styles/blocks/_calendar.scss
@@ -10,9 +10,10 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 720px;
-  padding: 10px;
-  gap: 1px;
+  //changed it from set value to calculation
+  width: 7 * $default-size + 6 * $size-gap + 2 * $default-padding;
+  padding: $default-padding;
+  gap: $size-gap;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -20,8 +21,8 @@
 
   &__day {
     background-color: #eee;
-    width: 100px;
-    height: 100px;
+    width: $default-size;
+    height: $default-size;
     border: 1px solid black;
     display: flex;
     justify-content: center;
