--- a/src/styles/components/_calendar.scss
+++ b/src/styles/components/_calendar.scss
@@ -20,11 +20,11 @@
     align-items: center;
     cursor: pointer;
     transition: background-color 0.5s;
-  }
 
-  &__day:hover {
-    background-color: pink;
-    transform: $cell-animation;
+    &:hover {
+      background-color: pink;
+      transform: $cell-animation;
+    }
   }
 
   @for $i from 1 through 31 {
