--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,7 +1,7 @@
 .calendar {
   width: $calendar-width;
   border: 2px solid black;
-  padding: 30px 10px;
+  padding: 30px $calendar-inline-padding;
 
   display: flex;
   align-items: center;
@@ -35,8 +35,9 @@
     height: $cell-height;
     border: 1px solid black;
 
-    display: block;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     font-weight: bold;
     font-size: 30px;
@@ -50,16 +51,6 @@
       cursor: pointer;
       background-color: pink;
       transform: translateY(-20px);
-    }
-
-    &::after {
-      position: absolute;
-      display: block;
-
-      width: 100%;
-      text-align: center;
-      top: 50%;
-      transform: translateY(-50%);
     }
   }
 }
