--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,9 +8,10 @@ $start-days:
   sat 5,
   sun 6;
 
-$calendar-width: 730px;
-
 $cell-width: 100px;
 $cell-height: 100px;
+
+$calendar-inline-padding: 10px;
+$calendar-width: $cell-width * 7 + $calendar-inline-padding * 3;
 
 $transition-duration: 0.5s;
