--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,58 @@
+@import "vars";
+
 body {
   margin: 0;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: $width-item * 7 + $padding-cal * 2 + $gap * 6;
+  margin: 20px auto 0;
+  gap: $gap;
+  padding: $padding-cal ;
+  box-sizing: border-box;
+
+  @each $day , $num in $days {
+    &--start-#{$day} :first-child {
+      margin-left: ($width-item + $gap) * $num;
+    }
+  }
+
+  @for $day from 28 to 31 {
+    &--month-#{$day} &__item:nth-child(n + #{$day + 1}) {
+      display: none;
+    }
+  }
+
+  &__item {
+    background-color: #eee;
+    width: $width-item ;
+    height: $height-item;
+    border: 1px solid grey;
+    box-sizing: border-box;
+    position: relative;
+    transition: all 0.5s;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i}):before {
+        color: #000;
+        font-size: 30px;
+        font-family: Arial, Helvetica, sans-serif;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: block;
+        content: "#{$i}";
+      }
+    }
+
+    &:hover {
+      background-color: pink;
+      transform: translateY(-20px);
+      cursor: pointer;
+
+    }
+  }
 }
