--- a/src/styles/components/_calendar.scss
+++ b/src/styles/components/_calendar.scss
@@ -19,7 +19,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    transition: transform 0.5s;
+    transition: transform 0.5s, background-color 0.5s;
 
     &:hover {
       background-color: pink;
