corrected code spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import './util/normalize.scss';
-@import './util/variables.scss';
+@import "./util/normalize.scss";
+@import "./util/variables.scss";
 
-@import './blocks/calendar.scss';
+@import "./blocks/calendar.scss";
