--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,4 @@
-body {
-  margin: 0;
-}
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import "./reset.scss";
+@import "./variables.scss";
+@import "./calendar.scss";
