--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -3,10 +3,10 @@ $day-box-size: 100px;
 $gap: 1px;
 $week_days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 
-
 .calendar {
   padding: $padding;
   width: $day-box-size * 7 + $gap * 6 + $padding * 2;
+  flex-shrink: 0;
 
   @each $name, $i in $week_days {
     &--start-day-#{$name} {
@@ -44,14 +44,13 @@ $week_days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 
   @for $date from 1 through 31 {
     & :nth-child(#{$date})::before {
-      content: '#{$date}';
+      content: "#{$date}";
       display: block;
     }
   }
-  @for $last-day from 28  to 31 {
-    &--month-length-#{$last-day} :nth-child(n + #{$last-day}) {
+  @for $last-day from 28 to 31 {
+    &--month-length-#{$last-day} :nth-child(n + #{($last-day + 1)}) {
       display: none;
     }
   }
-  }
-
+}
