--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,22 @@
+@import "./utils/variables";
+@import "./blocks/calendar.scss";
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
