added separate files to src/styles, moved same properties from specify ntn-child to one class

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,56 +1,4 @@
+@import "normilize.scss";
 @import "util/variables";
 @import "util/functions";
-
-body {
-  margin: 0;
-}
-
-.calendar {
-  display: flex;
-  gap: $gap * 1px;
-  flex-wrap: wrap;
-  width: getSize($base-size, $main-indent, $gap, $columns);
-  padding: $main-indent;
-  margin: 0 auto;
-
-  @each $day-name, $week-num in $start-day {
-    &--start-day-#{$day-name} {
-      & :first-child {
-        margin-left: getFirstDayIndent($week-num, $base-size, $gap);
-      }
-    }
-  }
-
-  @each $last-days in $month-length {
-    &--month-length-#{$last-days} {
-      @for $day from 1 through $last-days {
-        & :nth-child(#{$day}) {
-          background: #eee;
-          border: 1px solid #000;
-          width: $base-size;
-          height: $base-size;
-          box-sizing: border-box;
-
-          &::before {
-            content: "#{$day}";
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100%;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 30px;
-          }
-        }
-      }
-    }
-  }
-
-  &__day {
-    &:hover {
-      background: #f5becb;
-      transform: translateY(-20px);
-      transition: transform 0.5s ease-out;
-      cursor: pointer;
-    }
-  }
-}
+@import "block/calendar";
