--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,64 @@
-body {
-  margin: 0;
+html {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 100%;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+
+  width: 706px;
+  padding: 10px;
+  gap: 1px;
+
+  @for $day from 28 through 31 {
+    &--month-length--#{$day} {
+      .day:nth-child(n + #{$day + 1}) {
+        display: none;
+      }
+    }
+  }
+
+  $daysOfWeek: ("mon": 1, "tue": 2, "wed": 3, "thu": 4, "fri": 5, "sat": 6, "sun": 7);
+
+  @each $day, $count in $daysOfWeek {
+    &--start-day--#{$day} {
+      .day:first-child {
+        margin-left: $count * 100px - 101px + $count;
+      }
+    }
+  }
+}
+
+.day {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+
+  width: 100px;
+  height: 100px;
+
+  background-color: #eee;
+  font-size: 30px;
+  font-family:Arial, Helvetica, sans-serif;
+  border: 1px black solid;
+
+  transition: transform 500ms;
+
+  @for $i from 1 through 31 {
+    &:nth-child(#{$i})::before {
+      content: '#{$i}';
+    }
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: pink;
+  
+    transform: translateY(-20px);
+  }
 }
