added center positioning and adjusted transitions

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import "./util/normalize.scss";
 @import "./util/variables.scss";
 
+@import "./blocks/page.scss";
 @import "./blocks/calendar.scss";
