--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,11 +1,11 @@
 .calendar {
   display: flex;
-  box-sizing: border-box;
-  max-width: $calendar-width;
-  min-width: $calendar-width;
+  width: $calendar-width;
   padding: $calendar-paddings;
   gap: $calendar-gap;
   flex-wrap: wrap;
+  flex-shrink: 0;
+  align-content: center;
 
   @each $key, $value in $day-of-week {
     &--start-day-#{$key} {
@@ -16,7 +16,6 @@
   }
 
   &__day {
-    box-sizing: border-box;
     display: flex;
 
     font-family: Arial, sans-serif;
@@ -38,7 +37,8 @@
       }
     }
 
-    transition: all 0.5s;
+    transition-property: color, transform;
+    transition-duration: 0.5s;
 
     &:hover {
       background-color: $day-hovered-color;
