--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -4,3 +4,13 @@ $padding-calendar: 10px;
 $gap: 1px;
 $calendar-size: $box-size * $week-days +
   ($week-days - 1) * $gap + 2 * $padding-calendar;
+
+$days: (
+  "mon": 0,
+  "tue": 1,
+  "wed": 2,
+  "thu": 3,
+  "fri": 4,
+  "sat": 5,
+  "sun": 6
+);
