--- a/src/styles/blocks/_calendar.scss
+++ b/src/styles/blocks/_calendar.scss
@@ -6,8 +6,6 @@
   gap: 1px;
   padding: 10px;
 
-
-
   &__day {
     display: none;
     width: $day-square;
@@ -25,15 +23,10 @@
     justify-content: center;
     line-height: $day-square;
 
-
     @for $i from 1 through 31 {
       &--#{$i}::before {
-        content: '#{$i}';
+        content: "#{$i}";
       }
-
-    // &::before {
-    //   content: counter(day);
-
 
     }
 
@@ -47,9 +40,6 @@
       display: none;
     }
 
-    // &:first-child {
-    //   margin-left: calc(#{$day-square} * (#{$day-offset} - 1) + 1px);
-    // }
     @each $day, $index in $days-of-week {
       @if $day == $start-day {
         &--start-day {
@@ -57,8 +47,8 @@
         }
       }
 
+    }
   }
-}
 
 }
 @for $i from 1 through $number-of-days {
@@ -66,4 +56,3 @@
     display: block;
   }
 }
-
