--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,56 +1,12 @@
 @import "variables.scss";
 
+@import "calendary.scss";
+
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
 
-.calendary {
-  display: flex;
-  flex-wrap: wrap;
-  width: $calendar-size;
-  flex-direction: row;
-  gap: $gap;
-  padding: $padding;
-
-  @each $day, $index in $start-days {
-    &--start-day-#{$day} .calendary__day:first-child {
-      margin-left: ($day-size + $gap ) * $index;
-
-    }
-  }
-  @for $index from 28 through 31 {
-    &--month-length-#{$index} :nth-child(n + #{$index + 1}) {
-      display: none;
-    }
-  }
-  &__day {
-    display: flex;
-    width: $day-size;
-    height: $day-size;
-    justify-content: center;
-    align-items: center;
-
-    font-size: 30px;
-    font-family: Arial, sans-serif;
-
-    background-color: $color_background;
-    border: $border-width;
-
-    transition: all 0.5s;
-    cursor: pointer;
-  }
-
-  &__day:hover {
-    background-color: pink;
-    transform: translateY(-20px);
-  }
-
-}
-
-@for $i from 1 through 31 {
-  .calendary .calendary__day:nth-child(#{$i}) p::before {
-    content: "#{$i}";
-  }
+body {
+  margin: 0;
+  padding: 0;
 }
