--- a/src/styles/calendary.scss
+++ b/src/styles/calendary.scss
@@ -7,7 +7,7 @@
   padding: $padding;
 
   @each $day, $index in $start-days {
-    &--start-day-#{$day} .calendary__day:first-child {
+    &--start-day-#{$day} &__day:first-child {
       margin-left: ($day-size + $gap ) * $index;
     }
   }
@@ -40,10 +40,7 @@
     transform: translateY(-20px);
   }
 
-}
-
-.calendary {
-  .calendary__day {
+  &__day {
     @for $i from 1 through 31 {
       &:nth-child(#{$i}) {
         p::before {
