--- a/src/styles/calendary.scss
+++ b/src/styles/calendary.scss
@@ -40,7 +40,7 @@
     transform: translateY(-20px);
   }
 
-  &__day {
+  .calendary__day {
     @for $i from 1 through 31 {
       &:nth-child(#{$i}) {
         p::before {
