deleted hover pseudoclass in loop

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,6 +50,13 @@ body {
 
     transition: 500ms;
 
+    &:hover {
+      background-color: purple;
+      color: wheat;
+
+      transform: translateY(-20px);
+    }
+
     &::before {
       left: 50%;
       top: 50%;
@@ -62,13 +69,6 @@ body {
     }
 
     @for $day from 1 through 31 {
-      &:nth-child(#{$day}):hover {
-        background-color: purple;
-        color: wheat;
-
-        transform: translateY(-20px);
-      }
-
       &:nth-child(#{$day})::before {
         content: "#{$day}";
       }
