display day fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,7 +43,8 @@ body {
   }
 
   &__day {
-    position: relative;
+    // position: relative;
+    display: flex;
     box-sizing: border-box;
     border: 1px solid black;
     @include boxSize($row-width);
@@ -58,14 +59,10 @@ body {
     }
 
     &::before {
-      left: 50%;
-      top: 50%;
+      margin: auto;
 
       font-size: 30px;
       font-family: Arial, Helvetica, sans-serif;
-      position: absolute;
-
-      transform: translate(-50%, -50%);
     }
 
     @for $day from 1 through 31 {
