--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,7 @@
-body {
-  margin: 0;
-}
+
+@import "./utils/normalize.scss";
+@import "./utils/variables.scss";
+@import "./utils/mixins.scss";
+
+@import "./components/calendar.scss";
+@import "./components/wrapper.scss";
