--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@ $n-of-days: 7;
 $pading-size: 10px;
 $cell-size: 100px;
 $gap: 1px;
-$days: ('mon': 0, 'tue': 1, 'wen': 2, 'thu': 3, 'fri': 4, 'sat': 5, 'sun': 6);
+$days: ("mon": 0, "tue": 1, "wen": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6);
 $days-value: $cell-size + $gap;
 
 .body {
@@ -23,7 +23,7 @@ $days-value: $cell-size + $gap;
   padding-inline: $pading-size;
   width: $days-value * $n-of-days - $gap + ($pading-size * 2);
 
-&__day {
+  &__day {
     position: relative;
     display: flex;
     justify-content: center;
@@ -35,33 +35,33 @@ $days-value: $cell-size + $gap;
     transition: transform 500ms, background-color 500ms;
   }
 
-@for $i from 1 through 31 {
+  @for $i from 1 through 31 {
     &__day:nth-child(#{$i})::after {
-    content: '#{$i}';
-    box-sizing: border-box;
-    display:inline-block;
-    position: absolute;
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
+      content: "#{$i}";
+      box-sizing: border-box;
+      display: inline-block;
+      position: absolute;
+      font-size: 30px;
+      font-family: Arial, Helvetica, sans-serif;
     }
   }
 
-@for $i from 1 through 31 {
-  &--month-#{$i} &__day:nth-child(n + #{$i + 1}) {
-    display: none;
+  @for $i from 1 through 31 {
+    &--month-#{$i} &__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
   }
-}
 
-@each $day, $value in $days {
-  &--start-#{$day} &__day:first-child  {
-    margin-left: calc(#{$days-value} * #{$value});
+  @each $day, $value in $days {
+    &--start-#{$day} &__day:first-child {
+      margin-left: calc(#{$days-value} * #{$value});
+    }
   }
-}
 
-&__day:hover {
-  cursor: pointer;
-  background-color: #ffc0cb;
-  transform: translateY(-20px);
-}
+  &__day:hover {
+    cursor: pointer;
+    background-color: #ffc0cb;
+    transform: translateY(-20px);
+  }
 
 }
